syntax = "proto3";

package entpb;

import "entpb/entpb.proto";

option go_package = "github.com/longgggwwww/hrm-ms-hr/ent/proto/entpb";

message GetBranchByUserIdRequest {
  string user_id = 1;
}

// Service definition
service ExtService {
  rpc GetBranchByUserId (GetBranchByUserIdRequest) returns (Branch);
}